<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_gallery"
        android:title="@string/main_tab_popular"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tab_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_gallery"
        android:title="@string/main_tab_top_rated"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tab_trips"
        android:enabled="true"
        android:icon="@drawable/ic_gallery"
        android:title="@string/main_tab_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tab_notification"
        android:enabled="true"
        android:icon="@drawable/ic_gallery"
        android:title="@string/main_tab_profile"
        app:showAsAction="ifRoom"/>
</menu>